--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   pie_chart: 3.1.1
+  cloud_firestore: ^0.13.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
