--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   url_launcher: ^3.0.1
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
